# traffic-ai

./: LICENSE  README.md  Starter.py  Toll_Booth.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
pages/: Traffic_Analysis.py
