[tool.poetry]
name = "traffic-ai"
version = "0.1.0"
description = ""
authors = ["bhuiyanmobasshir94"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.31.1"
folium = "^0.15.1"
streamlit-folium = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
